@@ -260,6 +260,26 @@ public:
 #endif
    }
 
+   /* the following methods are provided for comptability with earlier SoPlex versions */
+#if (SOPLEX_VERSION < 160 || SOPLEX_SUBVERSION < 5)
+   Real feastol()
+   {
+      return delta();
+   }
+
+   Real opttol()
+   {
+      return delta();
+   }
+
+   void setFeastol(
+      const Real d
+      )
+   {
+      return setDelta(d);
+   }
+#endif
+
    /** set iteration limit (-1 = unbounded) */
    void setIterationLimit(
       const int          itlim
@@ -599,8 +619,8 @@ public:
          CPX_CALL( CPXreadcopybase(m_cpxenv, m_cpxlp, "spxcheck.bas") );
 
          /* set tolerances */
-         CPX_CALL( CPXsetdblparam(m_cpxenv, CPX_PARAM_EPOPT, delta()) );
-         CPX_CALL( CPXsetdblparam(m_cpxenv, CPX_PARAM_EPRHS, delta()) );
+         CPX_CALL( CPXsetdblparam(m_cpxenv, CPX_PARAM_EPOPT, MAX(opttol(), 1e-9)) );
+         CPX_CALL( CPXsetdblparam(m_cpxenv, CPX_PARAM_EPRHS, MAX(feastol(), 1e-9)) );
 
          /* solve LP */
          CPX_CALL( CPXlpopt(m_cpxenv, m_cpxlp) );
@@ -632,8 +652,8 @@ public:
             switch( cpxstat )
             {
             case CPX_STAT_OPTIMAL:
-               if( (getSense() == SPxSolver::MINIMIZE && LTrel(cpxobj, getObjUpLimit(), 2*delta()))
-                  || (getSense() == SPxSolver::MAXIMIZE && GTrel(cpxobj, getObjLoLimit(), 2*delta())) )
+               if( (getSense() == SPxSolver::MINIMIZE && LTrel(cpxobj, getObjUpLimit(), 2*opttol()))
+                  || (getSense() == SPxSolver::MAXIMIZE && GTrel(cpxobj, getObjLoLimit(), 2*opttol())) )
                {
                   SCIPerrorMessage("In %s: SoPlex returned status=%d (%s) while CPLEX claims obj=%.10f %s %.10f=obj.limit (%s) (checknum=%d)\n",
                      m_probname, m_stat, spxStatusString(m_stat), cpxobj, getSense() == SPxSolver::MINIMIZE ? "<" : ">",
@@ -677,14 +697,14 @@ public:
          /* check for same objective values */
          else if( m_stat == SPxSolver::OPTIMAL )
          {
-            if( (getSense() == SPxSolver::MINIMIZE && LTrel(value(), cpxobj, 2*delta()))
-               || (getSense() == SPxSolver::MAXIMIZE && GTrel(value(), cpxobj, 2*delta())) )
+            if( (getSense() == SPxSolver::MINIMIZE && LTrel(value(), cpxobj, 2*opttol()))
+               || (getSense() == SPxSolver::MAXIMIZE && GTrel(value(), cpxobj, 2*opttol())) )
             {
-               SCIPerrorMessage("In %s: LP optimal; SoPlex value=%.10f %s CPLEX value=%.10f too good (checknum=%d)\n", value(),
-                  m_probname, getSense() == SPxSolver::MINIMIZE ? "<" : ">", cpxobj, m_checknum);
+               /* SCIPerrorMessage("In %s: LP optimal; SoPlex value=%.10f %s CPLEX value=%.10f too good (checknum=%d)\n", value(),
+                  m_probname, getSense() == SPxSolver::MINIMIZE ? "<" : ">", cpxobj, m_checknum); */
             }
-            else if( (getSense() == SPxSolver::MINIMIZE && GTrel(value(), cpxobj, 2*delta()))
-               || (getSense() == SPxSolver::MAXIMIZE && LTrel(value(), cpxobj, 2*delta())) )
+            else if( (getSense() == SPxSolver::MINIMIZE && GTrel(value(), cpxobj, 2*opttol()))
+               || (getSense() == SPxSolver::MAXIMIZE && LTrel(value(), cpxobj, 2*opttol())) )
             {
                SCIPerrorMessage("In %s: LP optimal; SoPlex value=%.10f %s CPLEX value=%.10f suboptimal (checknum=%d)\n", value(),
                   m_probname, getSense() == SPxSolver::MINIMIZE ? ">" : "<", cpxobj, m_checknum);
@@ -763,7 +783,11 @@ public:
          verbosity = Param::verbose();
          Param::setVerbose(getLpInfo() ? 3 : 0);
          SCIPdebugMessage("simplifying LP\n");
+#if (SOPLEX_VERSION >= 160 && SOPLEX_SUBVERSION >= 5)
+         result = simplifier->simplify(*this, epsilon(), feastol(), opttol());
+#else
          result = simplifier->simplify(*this, epsilon(), delta());
+#endif
          SCIPdebugMessage("simplifier ended with status %u (0: OKAY, 1: INFEASIBLE, 2: DUAL_INFEASIBLE, 3: UNBOUNDED, 4: VANISHED)\n", result);
 
          /* unsimplification is not designed for these cases, thus reload original/scaled lp */
@@ -2692,7 +2716,7 @@ SCIP_RETCODE lpiStrongbranch(
    lpi->spx->setType( lpi->spx->rep() == SPxSolver::ROW ? SPxSolver::ENTER : SPxSolver::LEAVE);
 
    /* down branch */
-   newub = EPSCEIL(psol-1.0, lpi->spx->delta());
+   newub = EPSCEIL(psol-1.0, lpi->spx->feastol());
    if( newub >= oldlb - 0.5 )
    {
       SCIPdebugMessage("strong branching down on x%d (%g) with %d iterations\n", col, psol, itlim);
@@ -2766,7 +2790,7 @@ SCIP_RETCODE lpiStrongbranch(
    /* up branch */
    if( !error )
    {
-      newlb = EPSFLOOR(psol+1.0, lpi->spx->delta());
+      newlb = EPSFLOOR(psol+1.0, lpi->spx->feastol());
       if( newlb <= oldub + 0.5 )
       {
          SCIPdebugMessage("strong branching  up  on x%d (%g) with %d iterations\n", col, psol, itlim);
@@ -4312,8 +4336,13 @@ SCIP_RETCODE SCIPlpiGetRealpar(
    switch( type )
    {
    case SCIP_LPPAR_FEASTOL:
-      *dval = lpi->spx->delta();
+      *dval = lpi->spx->feastol();
       break;
+#if (SOPLEX_VERSION >= 160 && SOPLEX_SUBVERSION >= 5)
+   case SCIP_LPPAR_DUALFEASTOL:
+      *dval = lpi->spx->opttol();
+      break;
+#endif
    case SCIP_LPPAR_LOBJLIM:
       *dval = lpi->spx->getObjLoLimit();
       break;
@@ -4329,7 +4358,7 @@ SCIP_RETCODE SCIPlpiGetRealpar(
    default:
       return SCIP_PARAMETERUNKNOWN;
    }  /*lint !e788*/
-   
+
    return SCIP_OKAY;
 }
 
@@ -4348,8 +4377,13 @@ SCIP_RETCODE SCIPlpiSetRealpar(
    switch( type )
    {
    case SCIP_LPPAR_FEASTOL:
-      lpi->spx->setDelta(dval);
+      lpi->spx->setFeastol(dval);
       break;
+#if (SOPLEX_VERSION >= 160 && SOPLEX_SUBVERSION >= 5)
+   case SCIP_LPPAR_DUALFEASTOL:
+      lpi->spx->setOpttol(dval);
+      break;
+#endif
    case SCIP_LPPAR_LOBJLIM:
       lpi->spx->setObjLoLimit(dval);
       break;
